--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -130,7 +130,7 @@ $M_1$ is the mean of the first condition, $sd_1$ is the standard deviation of th
 To avoid the cases that some participants participated more than one experiments, we inspected the all available information of participants and only included participants' results from their first participation. As mentioned above, 24 participants were intentionally recruited to participate both exp 1a and exp 2, we only included their results from exp 1a in the meta-analysis.
 
 ```{r loadingData_All,echo=FALSE,results='hide'}
-# Experiemnt 1a ----
+# Exp 1a ----
 # data from THU
 df1a_1 <- read.csv(".\\exp1a\\rawdata_behav_exp1a_201404_2019_export.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA"), encoding="UTF-8") %>%
@@ -260,7 +260,7 @@ df1a.meta.rt <- df1a.v.rt_m %>%
                 Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
   dplyr::select(CommonColnames_rt)
 
-# Experiemnt 1b ====
+# Exp 1b ====
 # data collected in Tsinghua U
 df1b_1 <- read.csv(".\\exp1b\\rawdata_behav_exp1b_201410_2019_export.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA"), encoding="UTF-8") %>%
@@ -388,7 +388,7 @@ df1b.meta.rt <- df1b.v.rt_m %>%
                 Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
   dplyr::select(CommonColnames_rt)
 
-# Experiemnt 1c ====
+# Exp 1c ====
 df1c <- read.csv(".\\exp1c\\rawdata_behav_exp1c_export2019.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA"), encoding="UTF-8") %>%
   dplyr::rename(Subject = 1) %>%
@@ -506,7 +506,7 @@ df1c.meta.rt <- df1c.v.rt_m %>%
                 Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
   dplyr::select(CommonColnames_rt)
 
-# Experiment 2 ----
+# Exp 2 ----
 # data collected in Tsinghua U
 df2 <- read.csv(".\\exp2\\rawdata_behav_exp2_201405_2019_export.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA"), encoding="UTF-8") %>%
@@ -615,7 +615,7 @@ df2.meta.rt <- df2.v.rt_m %>%
                 Domain = "Morality") %>%        # add domain as morality, to be comparable with experiment 5.
   dplyr::select(CommonColnames_rt)
 
-# experiment 3a ----
+# Exp 3a ----
 # data collected in Tsinghua U
 df3a <- read.csv(".\\exp3a\\rawdata_behav_exp3a_2014_export_2019.csv", header = TRUE,
                    sep = ",", stringsAsFactors=FALSE, na.strings=c("","NA"), encoding="UTF-8") %>%
@@ -740,12 +740,13 @@ df3b <- read.csv(".\\exp3b\\rawdata_behav_exp3b_201704_export_2019.csv", header 
                 RT  = Target.RT,
                 CRESP = Target.CRESP,
                 RESP = Target.RESP,
-                Matchness = YesNoResp) %>%
+                Matchness = YesNoResp,
+                Valence = Morality) %>%
                 
   # in this experiment we need to get the value of valence and identity from shape
-  dplyr::mutate(Valence = ifelse(Shape == "Goodself" | Shape == "Goodother", "Good", 
-                                 ifelse(Shape == "Normalself" | Shape == "Normalother","Neutral", "Bad")),
-                Identity = ifelse(Shape == "Goodself" | Shape == "Normalself" | Shape == "Badself", 
+  dplyr::mutate(#Valence = ifelse(Shape == "Goodself" | Shape == "Goodother", "Good", 
+                #                 ifelse(Shape == "Neutralself" | Shape == "NeutralOther","Neutral", "Bad")),
+                Identity = ifelse(Identity == "self" | Identity == "Self", 
                                   "Self", "Other"),
                 Val_lab = ifelse(Label == "好他" | Label == "好我" | Label == "好她" , "Good",         # re-code the label
                                  ifelse(Label == "常他"| Label == "常我" | Label == "常她", "Neutral", "Bad")),
@@ -1688,7 +1689,7 @@ df7b_m.meta.rt <- df7b_m.v.rt_m %>%
 
 # Results
 
-```{r combine valid Data,echo=FALSE,results='hide'}
+```{r remove repeated subj Data,echo=FALSE,results='hide'}
 
 ## exclude the repeating subjects
 df1c.meta.d <- df1c.meta.d %>% dplyr::filter(!Subject %in% c(1206, 1207, 1208, 1210))
@@ -1715,7 +1716,9 @@ df6b.meta.rt <- df6b.meta.rt %>% dplyr::filter(!Subject %in% c(6217)) # exclude 
 df7a_m.meta.d <- df7a_m.meta.d %>% dplyr::filter(!Subject %in% c(7020))   # exclude participants from ex1b, 1c, and 2
 df7a_m.meta.rt <- df7a_m.meta.rt %>% dplyr::filter(!Subject %in% c(7020)) # exclude participants from ex1b, 1c, and 2
 
+```
 
+```{r first meta,echo=FALSE,results='hide'}
 # Mini-meta of Valence effect -----
 df.meta_d_1 <- rbind(df1a.meta.d, df1b.meta.d, df1c.meta.d, df2.meta.d, df5.meta.d, df6a.meta.d) 
 
@@ -1828,15 +1831,185 @@ p_meta_val_1 <- ggplot(df.res.meta_1, aes(x=DVtype, y=Cohen_d, fill=Effect)) +
            position=position_dodge()) +
   geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax = Cohen_d + 1.96*se), width=.2,
                  position=position_dodge(.9)) +
-  coord_cartesian(ylim=c(-0.75, 0.75))+
+  coord_cartesian(ylim=c(-1.1, 1.1))+
   scale_color_brewer(palette = "Dark2")+
   scale_fill_brewer(palette = "Dark2")+
-  ylab(expression(paste("Cohen' d of ",italic("d"), "prime", sep = ' ')))+
+  ylab(expression(paste("Cohen's  ",italic("d"), sep = ' ')))+
   apatheme
 
+```
 
+```{r second meta,echo=FALSE,results='hide'}
 # Results part 2: with self-referential ----
+# included experiments: 3a, 3b, 6b, 7a, 7b
 
+# combine the data
+df.meta_d_2 <- rbind(df3a.meta.d, df3b.meta.d, df6b.meta.d, df7a_m.meta.d, df7b_m.meta.d) 
+df.meta_rt_2 <- rbind(df3a.meta.rt, df3b.meta.rt, df6b.meta.rt, df7a_m.meta.rt, df7b_m.meta.rt)
+
+# calculate the mean, sd, n, and r for estimating the effect size and SE of effect size.
+effectList_2 <- c('Good_Bad_S','Good_Neut_S','Neut_Bad_S',
+                'Good_Bad_O','Good_Neut_O','Neut_Bad_O')
+
+df.ES_2 <- data.frame(matrix(, nrow=length(unique(df.meta_d_2$ExpID))*length(effectList_2)*2, ncol=0)) %>%
+  dplyr::mutate(DVtype = rep(c('RT', 'dprime'), each = length(unique(df.meta_d_2$ExpID))*length(effectList_2)),
+                ExpID  = rep(rep(unique(df.meta_d_2$ExpID), each = length(effectList_2)), 2),
+                Effect = rep(effectList_2, length(unique(df.meta_d_2$ExpID))*2),
+                M1 = NA, SD1 = NA, M2 = NA, SD2 = NA, N = NA, r = NA, ES = NA, ES.var = NA)
+
+for (DVName in c('RT','dprime')){
+  if (DVName == 'RT'){
+    metaData <- df.meta_rt_2 %>% dplyr::filter(Matchness == "Match") %>% dplyr::rename(Value = RT)
+  } else{
+    metaData <- df.meta_d_2 %>% dplyr::rename(Value = dprime)
+  }
+  
+  for (expName in unique(metaData$ExpID)){
+    for (effectName in effectList_2){
+      tmpdata <- metaData %>% dplyr::filter(ExpID == expName & Domain == 'Morality')
+      
+      if (effectName == 'Good_Bad_S'){
+        
+        if (!all(is.na(tmpdata$Identity))){
+          #print(paste('processing Good_Bad_S of ', expName, sep = ''))
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Good" & Identity == 'Self')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Bad" & Identity == 'Self')  
+          }
+        else{
+            #print(paste('Skip Good_Bad_S of ', expName, sep = ''))
+          next
+          }
+        }
+      else if (effectName == 'Good_Neut_S'){
+        if (!all(is.na(tmpdata$Identity)) & 'Neutral' %in% tmpdata$Valence ){
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Good" & Identity == 'Self')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Neutral" & Identity == 'Self')  
+          }
+        else{
+          next
+          }
+        }  
+      else if (effectName == 'Neut_Bad_S'){
+        if (!all(is.na(tmpdata$Identity)) & 'Neutral' %in% tmpdata$Valence ){
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Neutral" & Identity == 'Self')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Bad" & Identity == 'Self')  
+          }
+        else{
+          next
+          }
+        }
+      else if (effectName == 'Good_Bad_O'){
+        if (!all(is.na(tmpdata$Identity))){
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Good" & Identity == 'Other')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Bad" & Identity == 'Other')  
+          }
+        else{
+          next
+          }
+        }
+      else if (effectName == 'Good_Neut_O'){
+        if (!all(is.na(tmpdata$Identity)) & 'Neutral' %in% tmpdata$Valence )
+          {
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Good" & Identity == 'Other')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Neutral" & Identity == 'Other')  
+          }
+        else{
+          next
+          }
+        }
+      else if (effectName == 'Neut_Bad_O'){
+        if (!all(is.na(tmpdata$Identity)) & 'Neutral' %in% tmpdata$Valence){
+          dataCond1 <- tmpdata %>% dplyr::filter(Valence == "Neutral" & Identity == 'Other')
+          dataCond2 <- tmpdata %>% dplyr::filter(Valence == "Bad" & Identity == 'Other')  
+          }
+        else{
+          next
+          }
+      }
+      
+      M1  <- mean(dataCond1$Value) -> df.ES_2$M1[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName]
+      SD1 <- sd(dataCond1$Value)   -> df.ES_2$SD1[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName] 
+      M2  <- mean(dataCond2$Value) -> df.ES_2$M2[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName]
+      SD2 <- sd(dataCond2$Value)   -> df.ES_2$SD2[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName]
+      N   <- length(unique(dataCond2$Subject)) -> df.ES_2$N[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName]
+      r   <- cor(dataCond1$Value,dataCond2$Value) -> df.ES_2$r[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName] 
+      tmp2 <- d.sgpp(m.1 = M1, m.2 = M2, sd.1 = SD1, sd.2 = SD2,n = N, r = r)
+      df.ES_2$ES[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName] <- tmp2[1,1]
+      df.ES_2$ES.var[df.ES_2$DVtype == DVName & df.ES_2$ExpID == expName & df.ES_2$Effect == effectName] <- tmp2[1,2]
+    }
+  }
+}
+
+df.ES_2_sum <- df.ES_2 %>% 
+  dplyr::group_by(DVtype, Effect) %>% 
+  tidyr::drop_na() %>% 
+  dplyr::summarise(Nexp = length(unique(ExpID)), Nsubj = sum(N, na.rm = T))
+
+groupList <- rep(c('Overall','Self','Other'), each = 3)
+groupList[10:13] <- c('Self_Other', 'Self_Other_G', 'Self_Other_N', 'Self_Other_B')
+
+df.res.meta_2 <- data.frame(matrix(, nrow= (2*3)*2, ncol=0)) %>%
+  dplyr::mutate(DVtype = rep(c('RT', 'dprime'), each = (2*3)),
+                #Group  = rep(groupList, 2),
+                Effect = rep(effectList_2, 2),
+                #Group  = rep(groupList, length(unique(df.meta_d$ExpID))*2),
+                N_exp = NA, Cohen_d = NA, se = NA, CI_low = NA, CI_upp = NA, pval = NA)
+
+#magicfor::magic_for(silent = TRUE)
+#p_meta_list = list() # create a empty list to store the forest plot
+
+for (DVName in c('RT','dprime')){
+  for (effectName in effectList_2){
+    df.res.meta <- df.ES_2 %>%
+      dplyr::filter(DVtype == DVName & Effect == effectName) %>%
+      tidyr::drop_na()
+  
+    tmp.meta.res <- metafor::rma(yi = df.res.meta$ES,
+                           vi = df.res.meta$ES.var,
+                           slab = df.res.meta$ExpID)
+    df.res.meta_2$N_exp[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$k
+    df.res.meta_2$Cohen_d[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$beta
+    df.res.meta_2$se[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$se
+    df.res.meta_2$CI_low[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$ci.lb
+    df.res.meta_2$CI_upp[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$ci.ub
+    df.res.meta_2$pval[df.res.meta_2$DVtype == DVName & df.res.meta_2$Effect == effectName] <- tmp.meta.res$pval
+  }
+}
+
+df.res.meta_2 <- df.res.meta_2 %>%
+  dplyr::mutate(Identity = ifelse(Effect == "Good_Bad_S" | Effect == "Good_Neut_S" | Effect == "Neut_Bad_S",
+                                  "Self", "Other"),
+                EffectType = ifelse(Effect == "Good_Bad_S" | Effect == "Good_Bad_O", "Good_Bad",
+                                    ifelse(Effect == "Good_Neut_S" | Effect == "Good_Neut_O", "Good_Neut", "Neut_Bad")))
+
+p_meta_val_2_self <- df.res.meta_2 %>%
+  dplyr::filter(Identity == "Self") %>%
+  ggplot(., aes(x=DVtype, y=Cohen_d, fill=EffectType)) + 
+  geom_bar(stat="identity", color=NA, 
+           position=position_dodge()) +
+  geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax = Cohen_d + 1.96*se), width=.2,
+                 position=position_dodge(.9)) +
+  coord_cartesian(ylim=c(-1.1, 1.1))+
+  scale_color_brewer(palette = "Dark2")+
+  scale_fill_brewer(palette = "Dark2")+
+  ylab(expression(paste("Cohen's ",italic("d"), sep = ' ')))+
+  apatheme
+
+p_meta_val_2_other <- df.res.meta_2 %>%
+  dplyr::filter(Identity == "Other") %>%
+  ggplot(., aes(x=DVtype, y=Cohen_d, fill=EffectType)) + 
+  geom_bar(stat="identity", color=NA, 
+           position=position_dodge()) +
+  geom_errorbar(aes(ymin=Cohen_d - 1.96*se, ymax = Cohen_d + 1.96*se), width=.2,
+                 position=position_dodge(.9)) +
+  coord_cartesian(ylim=c(-1.1, 1.1))+
+  scale_color_brewer(palette = "Dark2")+
+  scale_fill_brewer(palette = "Dark2")+
+  ylab(expression(paste("Cohen's ",italic("d"), sep = ' ')))+
+  apatheme
+```
+
+```{r third meta,echo=FALSE,results='hide'}
 df.meta_d <- rbind(df1a.meta.d, df1b.meta.d, df1c.meta.d, df2.meta.d, df3a.meta.d, df3b.meta.d, df4a.meta.d,
                    df4b.meta.d, df5.meta.d, df6a.meta.d, df6b.meta.d, df7a_m.meta.d, df7b_m.meta.d) 
 
